[package]
name = "bear_tracks"
version = "5.0.4"
edition = "2021"
authors = ["Jayen Agrawal"]
description = "a scouting app for frc"
readme = "README.md"
repository = "https://github.com/JayAgra/bearTracks/"
license = "MIT"
build = "build.rs"

[dependencies]
actix = "0.13.1"
actix-files = "0.6.5"
actix-governor = "0.5.0"
actix-http = "3.4"
actix-identity = "0.4.0"
actix-session = { version = "~0.7", features = ["cookie-session"] }
actix-web = { version = "4.4", features = ["openssl"] }
actix-web-actors = "4.2.0"
actix-web-static-files = "4.0.1"
argon2 = "0.5.2"
async-trait = { version = "~0.1" }
anyhow = { version = "~1.0" }
base64urlsafedata = "0.1.3"
chrono = { version = "~0.4" }
dotenv = "0.15.0"
env_logger = "0.10"
futures-util = { version = "0.3.17", default-features = false, features = ["std"] }
html-escape = "0.2.13"
log = "0.4"
once_cell = { version = "~1.17" }
openssl = { version = "0.10", features = ["v110"] }
r2d2 = "0.8"
r2d2_sqlite = "0.22"
rand = "0.8.5"
regex = "1.10.3"
reqwest = "0.11.22"
serde = { version = "1.0", features = ["derive"] }
serde_cbor_2 = { version = "0.12.0-dev" }
serde_json = "1.0"
static-files = "0.2.1"
tokio = { version = "1.22.0", features = [ "sync", "test-util", "macros", "net", "rt-multi-thread", "time" ] }
vader_sentiment = "0.1.1"
webauthn-rs = { version = "0.4.8", features = ["danger-allow-state-serialisation"]}

[build-dependencies]
static-files = "0.2.1"

[dependencies.rusqlite]
version = "0.29"
features = ["bundled"]