[package]
name = "webauthn_login"
version = "0.1.1"
edition = "2021"
rust-version = "1.70.0"
authors = ["Jayen Agrawal"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
webauthn-rs-proto = { version = "0.5.0-dev", features = ["wasm"] }
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
serde-wasm-bindgen = "0.4"
wasm-bindgen-futures = { version = "0.4" }
yew = "0.19"
js-sys = "0.3"
gloo = "0.6"
url = "2"
serde_json = "^1.0.79"

[dependencies.web-sys]
version = "0.3"
features = [
    "CredentialCreationOptions",
    "CredentialRequestOptions",
    "CredentialsContainer",
    "Navigator",
    "PublicKeyCredential",
    "PublicKeyCredentialCreationOptions",
]